# st-chat-message

./: .gitignore  README.md  build.sh  pyproject.toml
examples/: chatbot.py  streaming.py
st_chat_message/: __init__.py
st_chat_message/frontend/: .gitignore  next.config.js  package.json  tailwind.config.js  tsconfig.json
st_chat_message/frontend/components/: code-section.tsx  message.tsx  streamlit-chat-message.tsx
st_chat_message/frontend/libs/: class-names.ts
st_chat_message/frontend/pages/: index.tsx
